// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches enzyme snapshots matches snapshot 1`] = `
<styled.a
  href="https://test.com"
  onClick={[Function]}
/>
`;

exports[`matches test renderer snapshot serializes the styles 1`] = `
<a
  className="sc-bdVaJa kvKKjL"
  href="https://test.com"
  onClick={[Function]}
/>
`;
